# a-b-c-apps

./: README.md  docker-compose.yml
.github/workflows/: publish-image-letter-a.yaml  publish-image-letter-b.yaml  publish-image-letter-c.yaml
a/: .dockerignore  .env.development  Dockerfile  Dockerfile.dev  LetterA.sln  README.md  appsettings.json  docker-compose.yml  otel-collector-config.yml  prometheus.yaml  runsettings.xml
a/scripts/: create-project.sh  generate-migrations.sh  start-lint-formatter.sh  start-tests.sh  start-web-development.sh  start-web-production.sh
a/src/: Database.cs  LetterA.csproj  LetterA.http  Models.cs  Program.cs  packages.lock.json
a/src/Migrations/: 20240919225918_0.Designer.cs  20240919225918_0.cs  AppDbContextModelSnapshot.cs
a/src/Properties/: launchSettings.json
a/tests/: Tests.csproj  packages.lock.json
a/tests/Support/: IntegrationTests.cs
b/: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  gunicorn_custom_timeout.py  manage.py  otel-collector-config.yml  otlp.py  pyproject.toml  setup.cfg
b/letter_b/: asgi.py  settings.py  urls.py  wsgi.py
b/letter_b/apps/example/: admin.py  apps.py  models.py
b/letter_b/apps/example/api/: global_exception_handler.py
b/letter_b/apps/example/api/v1/: serializers.py  views.py
b/letter_b/apps/example/migrations/: 0001_initial.py
b/letter_b/apps/example/pubsub/: create_audit_action_consumer.py
b/letter_b/apps/example/pubsub/pubsub_logic/: create_audit_action.py
b/letter_b/support/: db_router.py  django_helpers.py
b/letter_b/support/healthcheck/: checkers.py  middlewares.py
b/scripts/: start-production.sh  start-tests.sh
b/scripts/consumers/: start-create-audit-action-consumer.sh
b/tests/: test_settings.py  test_urls.py  utils.py
b/tests/apps/example/api/: test_global_exception_handler.py
b/tests/apps/example/api/v1/: test_serializers.py  test_views.py
b/tests/apps/example/management/commands/: test_seed.py
b/tests/apps/example/pubsub/: test_create_audit_action_consumer.py
b/tests/apps/example/pubsub/pubsub_logic/: test_create_audit_action.py
b/tests/support/healthcheck/: test_checkers.py
c/: .dockerignore  .env  .gitignore  .prettierrc.js  Dockerfile  README.md  docker-compose.yaml  healthcheck.js  jest.config.js  next.config.mjs  otel-collector-config.yml  package-lock.json  package.json
c/src/: instrumentation.js  otlp-browser.js  otlp-node.js
c/src/app/: layout.js  page.js  settings.js
c/src/ra-data-django-rest-framework-pagination/: django-rest-framework-pagination.js  index.js
c/src/ra-data-drf-page-number-pagination/: index.js  page-number-navigation.js  page-number-navigation.spec.js
(+21 files in other folders)
